# clonedncopied-bot

./: .env.example  .gitignore  pyproject.toml
clonedncopied_bot/: bot.py  constants.py
